--- a/css/styles.css
+++ b/css/styles.css
@@ -189,6 +189,16 @@
     padding-top: 200px;
     padding-bottom: 200px;
     text-align: center;
+    background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4), 
+      rgba(47, 48, 58, 0.4)
+      ), 
+      url(../images/overlay.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    max-width: 1600px;
+    margin: 0 auto;
   }
   
   .hero-main {
@@ -221,12 +231,53 @@
   }
   .advantage-item {
     width: 270px;
+    padding-top: 25px;
   }
   
   .advantage-item:not(:last-child) {
     margin-right: 30px;
   }
+
+  .advantage-item-antenna::before {
+    display: block;
+    content: "";
+    height: 70px;
+    background-image: url(../images/antenna.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .advantage-item-clock::before {
+    display: block;
+    content: "";
+    height: 70px;
+    background-image: url(../images/clock.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
   
+  .advantage-item-diagram::before {
+    display: block;
+    content: "";
+    height: 70px;
+    background-image: url(../images/diagram.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .advantage-item-astronaut::before {
+    display: block;
+    content: "";
+    height: 70px;
+    background-image: url(../images/astronaut.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
   .advantage-title {
     font-weight: 700;
     font-size: 14px;
@@ -234,6 +285,7 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--header-title-color);
+    margin-top: 55px;
     margin-bottom: 10px;
   }
   
