--- a/css/styles.css
+++ b/css/styles.css
@@ -231,7 +231,6 @@
   }
   .advantage-item {
     width: 270px;
-    padding-top: 25px;
   }
   
   .advantage-item:not(:last-child) {
@@ -241,41 +240,53 @@
   .advantage-item-antenna::before {
     display: block;
     content: "";
-    height: 70px;
+    height: 120px;
     background-image: url(../images/antenna.png);
-    background-size: contain;
+    background-size: 75px 75 px;
     background-repeat: no-repeat;
     background-position: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-color: #F5F4FA;
   }
 
   .advantage-item-clock::before {
     display: block;
     content: "";
-    height: 70px;
+    height: 120px;
     background-image: url(../images/clock.png);
-    background-size: contain;
+    background-size: 75px 75 px;
     background-repeat: no-repeat;
     background-position: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-color: #F5F4FA;
   }
   
   .advantage-item-diagram::before {
     display: block;
     content: "";
-    height: 70px;
+    height: 120px;
     background-image: url(../images/diagram.png);
-    background-size: contain;
+    background-size: 75px 75 px;
     background-repeat: no-repeat;
     background-position: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-color: #F5F4FA;
   }
 
   .advantage-item-astronaut::before {
     display: block;
     content: "";
-    height: 70px;
+    height: 120px;
     background-image: url(../images/astronaut.png);
-    background-size: contain;
+    background-size: 75px 75 px;
     background-repeat: no-repeat;
     background-position: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-color: #F5F4FA;
   }
 
   .advantage-title {
@@ -285,7 +296,7 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--header-title-color);
-    margin-top: 55px;
+    margin-top: 30px;
     margin-bottom: 10px;
   }
   
